--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "cors": "^2.8.5",
     "express": "^4.15.2",
     "nodemon": "^1.18.10",
-    "socket.io": "^2.2.0",
-    "socket.io-client": "^2.2.0"
+    "socket.io": "^2.2.0"
   }
 }
